--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
@@ -12,9 +12,9 @@
                   <div class="card-body">
                     <h5 class="card-title"></h5>
                     {% for i in shift_list %}
-                    <div class="row">
+                    <div class="row mt-5">
                       <div class="col text-center">
-                        <h3> راندمان اپراتورهای شیفت {{i.name}} </h3>
+                        <h3 style="font-family: 'iransans-bold'"> راندمان اپراتورهای شیفت {{i.name}} {{mah}} ماه {{sal}}</h3>
                       </div>
                       <div class="table-responsive"> <!-- Required for Responsive -->
                         <table class="table table-striped table-bordered" id="company-table">
