--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/nezafatPadashList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/nezafatPadashList.html
@@ -13,12 +13,11 @@
                         <thead>
                         <tr class="bg-info">
                         <th>عنوان</th>
-                        <th>ماه</th>
-                        <th>سال</th>
+                       
                         <th>رتبه</th>
                         <th>سرشیفت</th>
                         <th>پرسنل</th>
-
+                            <th>عملیات</th>
                         </tr>
                         </thead>
                         <tbody>
