--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/tolidpadash/partialTolidPadashList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/tolidpadash/partialTolidPadashList.html
@@ -3,12 +3,9 @@
 <tr>
   <td>{{c.description}}</td>
   <td>{{c.rank}}</td>
- 
   <td>{{c.price_sarshift|floatformat:0|intcomma}}</td>
   <td>{{c.price_personnel|floatformat:0|intcomma}}</td>
-  <td><button type="button" class="btn btn-outline-light js-update-assetRandeman" data-url="{% url 'assetrandemaninit_update' c.id %}">  <i class="ti-eye"></i></button></td>
-
-
+<td><button type="button" class="btn btn-outline-light js-update-tolidPadash" data-url="{% url 'tolidPadash_update' c.id %}">  <i class="ti-eye"></i></button></td>
+  
 </tr>
 {% endfor %}
-
