--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/assetRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/assetRandemanList.html
@@ -90,10 +90,10 @@
                         <table class="table table-striped table-bordered" id="company-table">
                           <thead class="bg-dark">
                             <tr>
-                              <th>سال</th>
-                              <th>ماه</th>
+                              <th scope="col">سال</th>
+                              <th scope="col">ماه</th>
 
-                              <th class="w-25"></th>
+                              <th scope="col"></th>
 
                             </tr>
                           </thead>
