--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -170,6 +170,12 @@
         </a>
       </li>
       <li>
+        <a href="{% url 'profile_list' %}">
+          <span>پروفایل مالی</span>
+
+        </a>
+      </li>
+      <li>
         <a href="{% url 'list_tolid_padash' %}">
           <span>پاداش تولید</span>
 
