--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialRankingList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialRankingList.html
@@ -28,7 +28,14 @@
             {% for i in shifts %}
             <tr data-assetrandeman={{i.asset_randeman_list.id}} data-id={{i.id}} data-position={{i.rank}}>
               <td>{{i.shift.name}}</td>
-              <td><input type="number"  name="" value="{{i.rank}}" class="form-control rank"></td>
+              {% comment %} <td><input type="number"  name="" value="{{i.rank}}" class="form-control rank"></td> {% endcomment %}
+              <td>
+                <select class="form-control rank" data-rank={{i.rank}}>
+                  <option value="1" {% if i.rank == 1%} selected {% endif %}>رتبه اول</option>
+                  <option value="2" {% if i.rank == 2%} selected {% endif %}>رتبه دوم</option>
+                  <option value="3" {% if i.rank == 3%} selected {% endif %}>رتبه سوم</option>
+                </select>
+              </td>
               <td><input type="number" name="" value="{{i.price_sarshift}}" class="form-control sarshift_val"></td>
               <td><input type="number" name="" value="{{i.price_personnel}}" class="form-control operator_val"></td>
 
