--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalSarshiftRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalSarshiftRandemanList.html
@@ -7,7 +7,7 @@
   <div class="col-lg-12">
     <div class="card">
       <div class="card-body">
-        <h6 class="card-title">{{title}}</h6>
+        <h6 class="card-title mb-3" style='font-family:iransans-bold'>{{title}} <span>( {{mah}} {{sal}} )</span></h6>
         <div class="table-responsive">
           <table class="table table-bordered">
             <thead class="bg-info">
@@ -24,7 +24,7 @@
 
               </tr>
             </thead>
-            <tbody>
+            <tbody style='font-family:iransans-bold'>
             {% for i in k %}
             <tr>
               <td>{{i.shift.name}}</td>
