--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
@@ -18,7 +18,7 @@
                       </div>
                       <div class="table-responsive"> <!-- Required for Responsive -->
                         <table class="table table-striped table-bordered" id="company-table">
-                          <thead class="bg-success-gradient">
+                          <thead class="bg-info-gradient">
                             <tr>
 
                               <th>نام دستگاه</th>
