--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/assetrandemaninit/partialInitRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/assetrandemaninit/partialInitRandemanList.html
@@ -1,14 +1,14 @@
 {% load humanize %}
 {% for c in formulas %}
-<tr>
+<tr data-id={{c.id}}>
   <td>{{c.asset_category.name}}</td>
-  <td>{{c.operator_count}}</td>
-  <td>{{c.max_randeman|floatformat:0|intcomma}}</td>
-  <td>{{c.randeman_yek_dastgah|floatformat:0|intcomma}}</td>
-  <td>{{c.randeman_mazrab_3|floatformat:0|intcomma}}</td>
-  <td>{{c.mablaghe_kole_randeman|floatformat:0|intcomma}}</td>
-  <td>{{c.mablaghe_kole_randeman_round|floatformat:0|intcomma}}</td>
-  <td>{{c.randeman_tolid|floatformat:0|intcomma}}</td>
+  <td contenteditable="true" class="editable-cell operator_count">{{c.operator_count}}</td>
+  <td contenteditable="true" class="editable-cell max_randeman">{{c.max_randeman|floatformat:0|intcomma}}</td>
+  <td contenteditable="true" class="editable-cell randeman_yek_dastgah">{{c.randeman_yek_dastgah|floatformat:0|intcomma}}</td>
+  <td contenteditable="true" class="editable-cell randeman_mazrab_3">{{c.randeman_mazrab_3|floatformat:0|intcomma}}</td>
+  <td contenteditable="true" class="editable-cell mablaghe_kole_randeman">{{c.mablaghe_kole_randeman|floatformat:0|intcomma}}</td>
+  <td contenteditable="true" class="editable-cell mablaghe_kole_randeman_round">{{c.mablaghe_kole_randeman_round|floatformat:0|intcomma}}</td>
+  <td contenteditable="true"  class="editable-cell randeman_tolid">{{c.randeman_tolid|floatformat:0|intcomma}}</td>
 
 <td><button type="button" class="btn btn-outline-light js-update-assetRandeman" data-url="{% url 'assetrandemaninit_update' c.id %}">  <i class="ti-eye"></i></button></td>
 
