--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/assetrandemaninit/initRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/assetrandemaninit/initRandemanList.html
@@ -74,7 +74,10 @@
 
 {% block javascript %}
 
-
+<script>
+    var randeman_kol_glob={{mablagh}};
+    var mazrab_3_glob={{mazrab_3}};
+</script>
  <script src="{% static 'project/assetrandemaninit.js' %}"></script>
  
 
