--- a/tiny_mrp/mrp/templates/mrp/financial_profile/profile_list.html
+++ b/tiny_mrp/mrp/templates/mrp/financial_profile/profile_list.html
@@ -21,6 +21,9 @@
                         <tr class="bg-info">
                         <th>نام پروفایل</th>
                         <th>تاریخ ایجاد</th>
+                        <th>مبلغ راندمان کل دستکاه</th>
+                        <th>مبلغ مضرب 3 کل</th>
+                        <th>راندمان تولید سرشیفت</th>
                         <th>عملیات</th>
                         </tr>
                         </thead>
