--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -111,6 +111,7 @@
   <div id="dashboards">
     <ul>
       <li class="navigation-divider">اطلاعات</li>
+      <li><a href="{% url 'list_dashboard' %}">داشبورد</a></li>
       <li><a href="{% url 'index' %}">ورود اطلاعات روزانه</a></li>
       <li><a href="{% url 'tolid_heatset' %}">آمار روزانه هیت ست</a></li>
 
