--- a/tiny_mrp/mrp/templates/mrp/failures/partialFailureForm.html
+++ b/tiny_mrp/mrp/templates/mrp/failures/partialFailureForm.html
@@ -7,3 +7,8 @@
     <label>{{form.name.label}}</label>
     {% render_field form.name  class='form-control' %}
   </div>
+  <div class="form-group form-check">
+    {% render_field form.is_it_count  class='form-check-input' %}
+    
+    <label>{{form.is_it_count.label}}</label>
+  </div>
