--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -112,7 +112,7 @@
     <ul>
       <li class="navigation-divider">اطلاعات</li>
       <li><a href="{% url 'list_dashboard' %}">داشبورد</a></li>
-      <li><a href="{% url 'index' %}">ورود اطلاعات روزانه</a></li>
+      <li><a href="{% url 'register_daily_amar' %}">ورود اطلاعات روزانه</a></li>
       <li><a href="{% url 'tolid_heatset' %}">آمار روزانه هیت ست</a></li>
 
       <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه<span class="badge badge-danger">2</span></a></li>
