--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -68,6 +68,11 @@
           <i data-feather="coffee"></i>
         </a>
       </li>
+      <li>
+        <a href="#" data-toggle="tooltip" data-placement="right" title="گزارش" data-nav-target="#apps3">
+          <i data-feather="layers"></i>
+        </a>
+      </li>
 
   </ul>
 </div>
@@ -196,6 +201,17 @@
       </li>
 
     </ul>
+  </div>
+  <div id="apps3">
+    <ul>
+      <li class="navigation-divider">گزارشات</li>
+    </ul>
+    <li>
+      <a href="{% url 'daily_tolid_with_chart' %}">
+        <span>نمودار میله ای روزانه تولید</span>
+
+      </a>
+    </li>
   </div>
 
 </div>
