--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/partialTolidRankingList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/partialTolidRankingList.html
@@ -15,7 +15,7 @@
           <thead class="bg-dark">
             <tr>
               <th>نام شیفت</th>
-              <th>رتبه نظافت</th>
+              <th>رتبه تولید</th>
               <th>پاداش سرشیفت</th>
               <th>پاداش پرسنل</th>
 
