--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -120,11 +120,11 @@
       <li><a href="{% url 'register_daily_amar' %}">ورود اطلاعات روزانه</a></li>
       <li><a href="{% url 'tolid_heatset' %}">آمار روزانه هیت ست</a></li>
 
-      <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه<span class="badge badge-danger">2</span></a></li>
+      <li><a href="{% url 'calendar_main' %}">مشاهده آمار روزانه</a></li>
       <li><a href="{% url 'calendar_randeman' %}">راندمان روزانه تولید</a></li>
       <li><a href="{% url 'calendar_tahlil' %}">تحلیل تولید روزانه</a></li>
       <li><a href="{% url 'monthly_detaild_report' %}">آمار تولید ماهانه</a></li>
-      <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه</a></li>
+      <li><a href="{% url 'monthly_brief_report' %}">آمار تولید ماهانه (راندمان)</a></li>
       <li><a href="{% url 'asset_failure_list' %}">ثبت آمار توقف
       <li><a href="{% url 'calendar_asset_failure' %}">آمار توقف
       </a></li>
