--- a/tiny_mrp/mrp/templates/mrp/shift/partialShiftList.html
+++ b/tiny_mrp/mrp/templates/mrp/shift/partialShiftList.html
@@ -2,5 +2,9 @@
 <tr>
   <td>{{c.id}}</td>
   <td>{{c.name}}</td>
+    <td>
+    <button type="button" class="btn btn-outline-light js-update-shift" data-url="{% url 'shift_update' c.id %}" >  <i class="ti-eye"></i></button>
+
+    </td>
 </tr>
 {% endfor %}
