--- a/tiny_mrp/mrp/templates/mrp/shift/shiftList.html
+++ b/tiny_mrp/mrp/templates/mrp/shift/shiftList.html
@@ -9,26 +9,40 @@
             <div class="card-body">
                 <h6 class="card-title">{{title}}</h6>
                 <div class="table-responsive" tabindex="1" style="overflow: hidden; outline: none;">
-                    <table class="table table-striped table-bordered">
+                    <table class="table table-striped table-bordered" id="company-table">
                         <thead>
                         <tr class="bg-info">
                           <th>کد شیفت</th>
                           <th>نام شیفت</th>
+                          <th>عملیات</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tbody_company">
                           {% include 'mrp/shift/partialShiftList.html' %}
 
                           </tbody>
                     </table>
+
                 </div>
 
             </div>
         </div>
+        <div class="modal fade" id="modal-company">
+            <div class="modal-dialog  modal-lg ">
+   
+              <div class="modal-content ">
+              </div>
+            </div>
+           </div>
 
 
 
     </div>
 </div>
+
+{% endblock %}
+{% load static %}
+{% block javascript %}
+<script src="{% static 'project/shift.js' %}"></script>
 
 {% endblock %}
