--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
@@ -12,9 +12,12 @@
                   <div class="card-body">
                     <h5 class="card-title"></h5>
                     {% for i in shift_list %}
-                    <div class="row mt-5">
-                      <div class="col text-center">
-                        <h3 style="font-family: 'iransans-bold'"> راندمان اپراتورهای شیفت {{i.name}} {{mah}} ماه {{sal}}</h3>
+                    <div class="row" style="margin-top:140px;">
+                      <div class="col text-center ">
+                        <h3 style="font-family: 'iransans-bold'">
+                        <img src="{% static 'assets/media/image/IMG_20180602_111455_515.jpg' %}" width="10%" alt="">
+
+                           راندمان اپراتورهای شیفت {{i.name}} {{mah}} ماه {{sal}}</h3>
                       </div>
                       <div class="table-responsive"> <!-- Required for Responsive -->
                         <table class="table table-striped table-bordered" id="company-table">
