--- a/tiny_mrp/mrp/templates/mrp/report/daily_tolid.html
+++ b/tiny_mrp/mrp/templates/mrp/report/daily_tolid.html
@@ -98,6 +98,26 @@
                                 </table>
                             </div>
                             
+
+                           
+                            
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header d-none">
+                            <h4 class="card-title">مجموع</h4>
+                        </div>
+                        <div class="card-body">
+                            
+                          
+                            
+
+                            <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="1">
+                                <table class="table table-striped" id="productionTable2">
+                                    
+                                </table>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
