--- a/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
+++ b/tiny_mrp/mrp/templates/mrp/assetrandeman/finalRandemanList.html
@@ -11,6 +11,7 @@
 
                   <div class="card-body">
                     <h5 class="card-title"></h5>
+
                     {% for i in shift_list %}
                     <div class="row" style="margin-top:140px;">
                       <div class="col text-center ">
@@ -26,7 +27,7 @@
 
                               <th>نام دستگاه</th>
                             {% for x in randeman_list %}
-                            
+
                             {% if i.id == x.randeman.shift.id %}
                             <th><b>{{x.randeman.asset_category}}</b></th>
                             {% endif %}
@@ -82,12 +83,12 @@
                             <tr class="text-center">
                               <td colspan="2">
                                <b> رتبه شیفت در تولید</b>
-                                
+
                               </td>
                               <td >
                                 {% for x in randeman_kol %}
                                   {% if i.id == x.shift.id %}
-                                  
+
                                   <b>{{x.tolid_rank}}</b>
                                   {% endif %}
                                   {% endfor %}
@@ -95,18 +96,18 @@
                               <td colspan="3">
                                 {% for x in randeman_kol %}
                                 {% if i.id == x.shift.id %}
-                                
+
                                 <b> {{x.padashe_tolid|floatformat:0|intcomma}}  </b>
                                 {% endif %}
                                 {% endfor %}
                               </td>
                               <td colspan="3" >
-                              
+
                               <b>جمع کل (ریال ) مبلغ قابل پرداخت</b>
                             </td>
                               <td colspan="2"> {% for x in randeman_kol %}
                                 {% if i.id == x.shift.id %}
-                                
+
                                 <b>{{x.sum|floatformat:0|intcomma}}</b>
                                 {% endif %}
                                 {% endfor %}</td>
@@ -120,11 +121,43 @@
 
 
 
+
                     </div>
                     <hr/>
                     {% endfor %}
 
+
+
+                    <p>  <div class="row" style="margin-top:140px;">
+                      <div class="col text-center ">
+                        <h3 style="font-family: 'iransans-bold'">
+                        <img src="{% static 'assets/media/image/IMG_20180602_111455_515.jpg' %}" width="10%" alt="">
+
+                           {{mah}} ماه {{sal}}</h3>
+                      </div>
+                        <div class="table-responsive"> <!-- Required for Responsive -->
+                          <table class="table table-striped table-bordered" id="company-table">
+                            <thead class="bg-success-gradient">
+                              <tr>
+
+                                <th>مجموع راندمان تولید</th>
+                                <th>مجموع پاداش تولید</th>
+                                <th>مجموع پاداش نظافت</th>
+                                <th>مجموع کل</th>
+                              </tr>
+                              </thead>
+                              <tbody>
+                                <td><b>{{sum_randeman_tolid_kol|floatformat:0|intcomma}}</b></td>
+                                <td><b>{{sum_padash_tolid_kol|floatformat:0|intcomma}}</b></td>
+                                <td><b>{{sum_nezafat_kol|floatformat:0|intcomma}}</b></td>
+                                <td><b>{{sum_randeman_tolid_kol_majmu|floatformat:0|intcomma}}</b></td>
+                              </tbody>
+                              </table>
+                        </div>
+
+                      </div></p>
                   </div>
+
                   <div class="modal fade" id="modal-company">
                    <div class="modal-dialog  modal-lg ">
 
