--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -35,6 +35,7 @@
                                
                                   </select>
                                 </li>
+                                
                             </ul>
                         </div>
                         <div class="action-right">
@@ -137,7 +138,7 @@
 
                                       <td contenteditable="true" class="editable-cell btc counter1 selectable1"></td>
                                       <td contenteditable="true" class="editable-cell btc counter2 selectable1"></td>
-                                      <td contenteditable="true" class="editable-cell3 production_full selectable1" data-formula="{{c.speedformula}}">{{c.max}}</td>
+                                      <td contenteditable="true" class="editable-cell3 production_full selectable1" data-maxformula="{{c.speedformula}}" data-vahed="{{c.machine.assetVahed}}" >{{c.max}}</td>
 
 
                                       <td contenteditable="true" data-formula="{{c.formula}}" class='production'></td>
