--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -28,7 +28,7 @@
                                 </li>
 
                                 <li class="list-inline-item mb-0">
-                                  <select class="form-control" aria-label="Default select example">
+                                  <select class="form-control" aria-label="Default select example" id="select_shift">
                                     {% for i in shifts %}
                                     <option value="{{i.id}}" >{{i.name}}</option>
                                     {% endfor %}
