--- a/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/details_aria.html
@@ -133,7 +133,7 @@
                                       <td contenteditable="true" class="editable-cell btc vahed selectable1">{{c.vahed}}</td>
 
                                       <td contenteditable="true" class="editable-cell btc nomre selectable1">{{c.nomre}}</td>
-                                      <td contenteditable="true" class="editable-cell editable-cell2 btc speed selectable1" data-nomre={{c.nomre}}>{{c.speed}}</td>
+                                      <td contenteditable="true" class="editable-cell editable-cell2  speed selectable1" data-nomre={{c.nomre}}>{{c.speed}}</td>
 
 
                                       <td contenteditable="true" class="editable-cell btc counter1 selectable1"></td>
