--- a/tiny_mrp/mrp/templates/mrp/tolid/daily_details_aria.html
+++ b/tiny_mrp/mrp/templates/mrp/tolid/daily_details_aria.html
@@ -53,7 +53,7 @@
 
                         <div class="card-body">
                           <h5 class="card-title">آمار روزانه</h5>
-                        
+                          {% include 'mrp/tolid/partial_daily_details_aria.html' %}
 
                         </div>
                       </div>
